# renovacao_seguros

./: .gitignore  README.md  pyproject.toml
notebooks/: SWEETVIZ_REPORT.html  analise_exploratoria.ipynb  modelos.ipynb  modelos_select_feats.ipynb
